--- a/phishing.html
+++ b/phishing.html
@@ -9,5 +9,5 @@
     <p>
         Make sure you are aware of what you scan and don't scam random QR codes!
     </p>
-    <a href="index.html">Back to Home</a>
+    <a href="phishing.html">Back to Home</a>
 </body>
